--- a/gradle.properties
+++ b/gradle.properties
@@ -32,10 +32,10 @@ loader_version_range=[47,)
 #
 # Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
 # Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
-mapping_channel=official
+mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=1.20.1
+mapping_version=2023.08.13-1.20.1
 
 
 ## Mod Properties
@@ -46,7 +46,7 @@ mod_id=infundere
 # The human-readable display name for the mod.
 mod_name=Infundere
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=MIT
+mod_license=The MIT License (MIT)
 # The mod version. See https://semver.org/
 mod_version=0.0.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
@@ -57,3 +57,7 @@ mod_group_id=de.tobfal.infundere
 mod_authors=TobFal
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=To be replaced.
+
+# JEI
+jei_mc_version=1.20.1
+jei_version=15.2.0.25
