--- a/gradle.properties
+++ b/gradle.properties
@@ -54,3 +54,6 @@ mod_description=To be replaced.
 # JEI
 jei_mc_version=1.20.1
 jei_version=15.2.0.25
+# GekoLib
+gekolib_mc_version=1.20
+gekolib_version=4.2
