--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,10 @@ pluginManagement {
         maven {
             url = 'https://maven.parchmentmc.org'
         }
+        // Sponge
+        maven {
+            url = 'https://repo.spongepowered.org/repository/maven-public/'
+        }
     }
 }
 
