--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,11 @@ repositories {
         name = "GeckoLib"
         url "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
     }
+
+    // Cursemaven
+    maven {
+        url "https://cursemaven.com"
+    }
 }
 
 dependencies {
@@ -141,6 +146,9 @@ dependencies {
 
     // GekoLib
     implementation fg.deobf("software.bernie.geckolib:geckolib-forge-${gekolib_mc_version}:${gekolib_version}")
+
+    // All the ores
+    //runtimeOnly fg.deobf("curse.maven:ato-405593:4590570")
 
     // Example mod dependency using a mod jar from ./libs with a flat dir repository
     // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
